--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.6",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/xlsx": "^0.0.35",
@@ -63,6 +64,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "lucide-react": "^0.303.0",
     "nanoid": "^5.0.4",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
